--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-output_path: "outputs/annotated_video.mp4"
+output_path: "outputs/"
 model_path: "scripts/models/FootAI_yolo11l/weights/best.pt"
 tracker_config: "bytetrack.yaml"
 confidence: 0.3
