Commit without models! pretrain, validate

--- a/scripts/models/FootAI_yolo11l_200epochs/args.yaml
+++ b/scripts/models/FootAI_yolo11l_200epochs/args.yaml
@@ -1,19 +1,19 @@
 task: detect
 mode: train
-model: yolo11n.pt
-data: ../data/data.yaml
-epochs: 100
+model: yolo11l.pt
+data: /content/datasets/football-players-detection-10/data.yaml
+epochs: 150
 time: null
-patience: 10
-batch: 16
-imgsz: 960
+patience: 100
+batch: 5
+imgsz: 1280
 save: true
 save_period: -1
 cache: false
-device: '0'
-workers: 0
-project: models
-name: FootAI_yolo11
+device: null
+workers: 8
+project: null
+name: train
 exist_ok: false
 pretrained: true
 optimizer: auto
@@ -30,13 +30,13 @@ fraction: 1.0
 profile: false
 freeze: null
 multi_scale: false
-compile: false
 overlap_mask: true
 mask_ratio: 4
 dropout: 0.0
 val: true
 split: val
 save_json: false
+save_hybrid: false
 conf: null
 iou: 0.7
 max_det: 300
@@ -96,11 +96,11 @@ fliplr: 0.5
 bgr: 0.0
 mosaic: 1.0
 mixup: 0.0
-cutmix: 0.0
 copy_paste: 0.0
 copy_paste_mode: flip
 auto_augment: randaugment
 erasing: 0.4
+crop_fraction: 1.0
 cfg: null
 tracker: botsort.yaml
-save_dir: C:\Users\Windows 10\PycharmProjects\FootAI\scripts\models\FootAI_yolo11
+save_dir: runs/detect/train
