--- a/scripts/models/FootAI_yolo11x/args.yaml
+++ b/scripts/models/FootAI_yolo11x/args.yaml
@@ -1,22 +1,22 @@
 task: detect
 mode: train
-model: yolo11x.pt
-data: /content/datasets/football-players-detection-10/data.yaml
-epochs: 50
+model: runs/detect/yolo11x_football_head/weights/last.pt
+data: /content/datasets/datasets/football-players-detection-20/data.yaml
+epochs: 200
 time: null
-patience: 10
-batch: 4
+patience: 75
+batch: 6
 imgsz: 960
 save: true
-save_period: -1
+save_period: 25
 cache: false
 device: null
 workers: 8
 project: null
-name: train
+name: yolo11x_football_finetune3
 exist_ok: false
 pretrained: true
-optimizer: auto
+optimizer: AdamW
 verbose: true
 seed: 0
 deterministic: true
@@ -28,7 +28,7 @@ resume: false
 amp: true
 fraction: 1.0
 profile: false
-freeze: null
+freeze: 0
 multi_scale: false
 overlap_mask: true
 mask_ratio: 4
@@ -70,15 +70,15 @@ simplify: true
 opset: null
 workspace: null
 nms: false
-lr0: 0.01
+lr0: 0.0008
 lrf: 0.01
 momentum: 0.937
 weight_decay: 0.0005
-warmup_epochs: 3.0
+warmup_epochs: 3
 warmup_momentum: 0.8
 warmup_bias_lr: 0.1
 box: 7.5
-cls: 0.5
+cls: 2.0
 dfl: 1.5
 pose: 12.0
 kobj: 1.0
@@ -95,12 +95,12 @@ flipud: 0.0
 fliplr: 0.5
 bgr: 0.0
 mosaic: 1.0
-mixup: 0.0
-copy_paste: 0.0
+mixup: 0.1
+copy_paste: 0.3
 copy_paste_mode: flip
 auto_augment: randaugment
 erasing: 0.4
 crop_fraction: 1.0
 cfg: null
 tracker: botsort.yaml
-save_dir: runs/detect/train
+save_dir: runs/detect/yolo11x_football_finetune3
